--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,103 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family:'Poppins',sans-serif;
+    transition: .3s ease;
+}
+/*colors*/
+:root{
+ --PrimaryColor :hsl(26,93%,50%);
+ --HoverColor :hsl(26,90%,42%);
+ --WhiteColor :hsl(0,0%,100%);
+ --blackColor :hsl(0,0%,18%);
+ --textColor :hsl(240,1%,48%);
+ --whiteColorDeam :hsl(0,0%,93%);
+ --greyBg :hsl(0,0%,96%);
+ --greyText :rgb(190,190,190);
+ --inputColor :hsl(330,12%,97%);
+
+}
+/* default styling*/
+a{
+    text-decoration: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+li{
+    list-style: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.section{
+    padding: 4rem 0 2rem;
+}
+.container{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.icon{
+    font-size: 2rem;
+    cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.flex{
+    display:flex;
+    align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.grid { 
+    display:grid;
+    align-items: center;
+}
+
+.btn {
+    padding: .4rem 1.5rem;
+    background:var(--PrimaryColor);
+    border:none;
+    outline:none;
+    border-radius: 3rem;
+    cursor: pointer;
+
+}
+
+.btn a {
+    color: var(--WhiteColor);
+    font-weight: 500;
+}
+
+.btn:hover a {
+    color :var(--WhiteColor);
+}
+
+.secIntro{
+    max-width: 70%;
+    text-align: center;
+    margin:  0 auto 2rem;
+}
+
+.secIntro .secTitle{
+    color: var(--blackColor);
+    line-height: 1.5rem;
+    padding-bottom: .5rem;
+}
+
+.secIntro p{
+    color: var(--textColor);
+    font-size: 13px;
+ font-weight: 500;
+}
+
+img , video{
+    width: 100%;
+    height: auto;
+}
+
+@media screen and (min-width :556px) {
+    .mainContent{
+        grid-template-columns: repeat(2,1fr);
+    }
+    
 }
